kubernetes/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: goserver-service
spec:
  selector:
    app: goserver
  type: LoadBalancer
  # type: ClusterIP
  # type: NodePort
  ports:
    - name: goserver-service
      port: 4000 # service port
      protocol: TCP
      targetPort: 8080 # container port
      # nodePort: 30001 # node port 30000 - 32767
